some layout bugs solved and user signup page completed

--- a/CSS/test_history.css
+++ b/CSS/test_history.css
@@ -11,7 +11,7 @@
   'aside section section section section section section '
   ;
    grid-gap: 2px;
-  
+   grid-template-columns: 16% auto;
 }
 .btn{
     display: flex;
@@ -55,19 +55,19 @@ background: linear-gradient(90deg, rgba(100,57,153,1) 0%, rgba(78,81,144,1) 25%,
 #aside{
     grid-area: aside;
     height: 110vh;
-    width: 191px;
+    width: 95%;
     background: rgb(197, 241, 172);
     
 }
 .userimg_box{
     background: rgb(26, 236, 131);
     display: flex;
-    margin: -13px;
+    margin: 0px;
     justify-items: center;
     align-items: center;
     flex-direction: column;
     height: 159px;
-    width: 194px;
+    width: 95%;
 }
 .aside_setting{
     width: 194px;
@@ -128,13 +128,13 @@ background: linear-gradient(90deg, rgba(100,57,153,1) 0%, rgba(78,81,144,1) 25%,
 #section{
     grid-area: section;
     /* margin-left: -88px; */
-    background:rgb(197, 241, 172);;
-    display: block;
-    flex-direction: row;
-    justify-content: space-evenly;
-    z-index: -1;
+    background: rgb(205, 230, 240);
+    /* opacity: 0.5; */
+    /* z-index: -10; */
+    padding: 10px;
+    /* margin: 0px 0px 0px 211px; */
+    grid-column-start: 2;
     float: right;
-    grid-column-start: 3;
    
 }
 .heading{
@@ -189,7 +189,7 @@ background: linear-gradient(90deg, rgba(100,57,153,1) 0%, rgba(78,81,144,1) 25%,
    box-shadow: 0px 0px 20px rgb(0, 0, 0,0.50);
    justify-content: space-around;
     font-size: 0.9em;
-    min-width: 977px;
+    min-width: 95%;
     border-collapse: collapse;
     font-family: 'Roboto', sans-serif;
 }
